--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
     "figlet": "^1.1.2",
+    "jade": "^1.11.0",
     "nconf": "^0.8.4",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {},
   "scripts": {
-      "start": "node app.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
